fixed button spacing using flexbox, column to take up whole width and be blocked

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ main {
 
 }
 
-.block {
-  display: block;
-  width: fit-content;
-  
+.btnBox {
+  display: flex;
+  flex-direction: column;
 }
+
